[bugfix] les potions ne fonctionnaient plus
Ce n'était pas à proprement parlé un bug, mais juste un problème lié au fait que j'avais déplacé le script utilisé par le prefab.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,23 +56,24 @@
     <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Chess.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\Chess.cs" />
     <Compile Include="Assets\Scripts\Game\Inventory.cs" />
     <Compile Include="Assets\Scripts\UI\Credits.cs" />
     <Compile Include="Assets\Scripts\Dangers\bridge.cs" />
     <Compile Include="Assets\Scripts\UI\PauseMenu.cs" />
     <Compile Include="Assets\Scripts\Player\PickUpObject.cs" />
     <Compile Include="Assets\wall.cs" />
-    <Compile Include="Assets\pickUpKeys.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\pickUpKeys.cs" />
     <Compile Include="Assets\Scripts\Game\GameOverManager.cs" />
     <Compile Include="Assets\Scripts\Game\CurrentSceneManager.cs" />
     <Compile Include="Assets\Scripts\Dangers\SpikeDamage.cs" />
     <Compile Include="Assets\Scripts\Dangers\webdegat.cs" />
     <Compile Include="Assets\Scripts\Game\LoadSpecificScene.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\HealPowerUp.cs" />
     <Compile Include="Assets\star.cs" />
     <Compile Include="Assets\Scripts\Dangers\Feu.cs" />
     <Compile Include="Assets\Scripts\Dangers\picdegats.cs" />
-    <Compile Include="Assets\Scripts\Potions\HealPowerRandom.cs" />
+    <Compile Include="Assets\LevelSelector.cs" />
     <Compile Include="Assets\Scripts\UI\MainMenu.cs" />
     <Compile Include="Assets\Scripts\Player\ladder.cs" />
     <Compile Include="Assets\Scripts\Dangers\DeathZone.cs" />
@@ -82,17 +83,16 @@
     <Compile Include="Assets\Scripts\Player\PlayerHealth.cs" />
     <Compile Include="Assets\Scripts\Game\AudioManager.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerSpawn.cs" />
-    <Compile Include="Assets\Scripts\Potions\HealPowerUp.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\Game\MovingPlatform.cs" />
     <Compile Include="Assets\door.cs" />
     <Compile Include="Assets\Scripts\Dangers\WeakSpot.cs" />
     <Compile Include="Assets\Scripts\UI\HealthBar.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\HealPowerRandom.cs" />
     <Compile Include="Assets\Scripts\Game\Checkpoint.cs" />
     <Compile Include="Assets\Scripts\UI\SettingsMenu.cs" />
     <Compile Include="Assets\Scripts\Game\DontDestroyOnLoadScene.cs" />
     <Compile Include="Assets\Scripts\Dangers\pieges.cs" />
-    <Compile Include="Assets\LevelSelector.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\imports\blob-1.0\bleu\LICENSE.txt" />
