--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Assets\Scripts\Gameplay\star.cs" />
     <Compile Include="Assets\Scripts\Dangers\Feu.cs" />
     <Compile Include="Assets\Scripts\Dangers\picdegats.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\water.cs" />
     <Compile Include="Assets\Scripts\UI\LevelSelector.cs" />
     <Compile Include="Assets\Scripts\UI\MainMenu.cs" />
     <Compile Include="Assets\Scripts\Player\ladder.cs" />
@@ -92,10 +93,11 @@
     <Compile Include="Assets\Scripts\Dangers\PoursuivreJoueur.cs" />
     <Compile Include="Assets\Scripts\Gameplay\HealPowerRandom.cs" />
     <Compile Include="Assets\Scripts\Game\Checkpoint.cs" />
-    <Compile Include="Assets\Parallax.cs" />
+    <Compile Include="Assets\Scripts\Game\Parallax.cs" />
     <Compile Include="Assets\Scripts\UI\SettingsMenu.cs" />
     <Compile Include="Assets\Scripts\Dangers\pieges.cs" />
-    <Compile Include="Assets\water.cs" />
+    <Compile Include="Assets\WaterHealth.cs" />
+    <Compile Include="Assets\WaterBar.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\imports\blob-1.0\bleu\LICENSE.txt" />
